# DosRagBench

./: .gitattributes  DosRagBench.o8349772  DosRagBench.o8407375  DosRagBench.o8407403  DosRagBench.o8407412  DosRagBench.o8473012  DosRagBench.o8473013  DosRagBench.o8473014  DosRagBench.o8473015  DosRagBench.o8473016  DosRagBench.o8473017  DosRagBench.o8473018  DosRagBench.o8473019  DosRagBench.o8539443  DosRagBench.o8539588  DosRagBench.o8539589  DosRagBench.o8539590  DosRagBench.o8539591  DosRagBench.o8539592  DosRagBench.o8539593  DosRagBench.o8539594  DosRagBench.o8539595  DosRagBench.o8539596  DosRagBench.o8539597  DosRagBench.o8539598  DosRagBench.o8539599  DosRagBench.o8539600  DosRagBench.o8539601  DosRagBench.o8539602  DosRagBench.o8539603  DosRagBench.o8539604  DosRagBench.o8539605  DosRagBench.o8539606  DosRagBench.o8539607  DosRagBench.o8539608  DosRagBench.o8539609  DosRagBench.o8539610  DosRagBench.o8539611  DosRagBench.o8539612  DosRagBench.o8539613  (+36 more)
.cache/: index_1050_all-MiniLM-L6-v2.docs.json  index_1050_all-MiniLM-L6-v2.faiss  index_3610_all-MiniLM-L6-v2.docs.json  index_505_all-MiniLM-L6-v2.docs.json  index_505_all-MiniLM-L6-v2.faiss
configs/: attacks.yaml  model_pairs.yaml
configs1/: attacks.yaml
data/: knowledge_base.json  queries.json
docs/: positioning.md
results/: avi_report.json  avi_report.md  c1_summary.csv
scripts/: #collect_c1.py#  .submit_c1.sh.swo  DosRagBench.o8407345  DosRagBench.o8407346  collect_c1.py  compute_avi.py  export_transcript.py  prepare_data.py  recompute_metrics.py  run_ablation_katana.pbs  run_attack.py  (+6 more)
(+102 files in other folders)
